force-app/main/default/objects/Residence_Visit_Assign_Leads__c/Residence_Visit_Assign_Leads__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Residence Visit Assign Leads</label>
</CustomObject>