force-app/main/default/objects/Residence_Visit_Assign_Leads__c/fields/Gachibowli_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Gachibowli_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gachibowli Boolean</label>
    <type>Checkbox</type>
</CustomField>