force-app/main/default/objects/Residence_Visit_Assign_Leads__c/fields/Gachibowli_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Gachibowli_Monthly_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gachibowli Monthly Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>