force-app/main/default/objects/Residence_Visit_Assign_Leads__c/fields/HSR_Book_Free_Consultation__c.field-meta.xml
<CustomField>
    <fullName>HSR_Book_Free_Consultation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSR Book Free Consultation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>