force-app/main/default/objects/Residence_Visit_Assign_Leads__c/fields/HSR_Boolean__c.field-meta.xml
<CustomField>
    <fullName>HSR_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSR Boolean</label>
    <type>Checkbox</type>
</CustomField>