force-app/main/default/objects/Residence_Visit_Assign_Leads__c/fields/HSR_Estimate_Flow__c.field-meta.xml
<CustomField>
    <fullName>HSR_Estimate_Flow__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSR Estimate Flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>